--- a/kokoatalk/friends.html
+++ b/kokoatalk/friends.html
@@ -97,7 +97,7 @@
     </div>
 
     <div id="no-mobile">
-        <span>Your screen is too big... </span>
+        <span>Your screen is super big... </span>
     </div>
 
     <script src="https://kit.fontawesome.com/79da796ef8.js" 
