--- a/index.html
+++ b/index.html
@@ -1,101 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="css/styles.css">
+  <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends -  Kokoa Talk</title>
-</head>
-<body> 
-    <div class="status-bar"> <!-- 상단 메뉴바 -->
-        <div class="status-bar__column">
-            <span>No Service</span>
-            <i class="fa-sharp fa-solid fa-wifi"></i>
-        </div>
-        <div class="status-bar__column">
-            <span>18:43</span>
-        </div>
-        <div class="status-bar__column">
-            <span>12%</span> 
-            <!-- 베터리 아이콘 -->
-            <i class="fa-solid fa-battery-quarter fa-lg"></i>
-            <!-- 충전중 아이콘 -->
-            <i class="fa-solid fa-bolt"></i>
-        </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to Kokoa Clone</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
     </div>
 
-        <header class="screen-header">
-            <h1 class="screen-header__title">Friends</h1>
-            <div class="screen-header__icons">
-                <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-                <span><i class="fas fa-music fa-lg" ></i></span>
-                <span><i class="fas fa-cog fa-lg"></i></span>
-            </div>
-        </header>
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
+        If you have a Kokoa Account, log in with your email or phone number.
+      </p>
+    </header>
 
-        <a id="friends-display-link">
-            <i class="fas fa-info-circle"></i>Friends Display
-            <i class="fas fa-chevron-right fa-xs"></i>
-        </a> 
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <a href="#">Find Kokoa Account or Password</a>
+    </form>
 
-        <main class="friends-screen">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="cat.jpeg" class="user-component__avatar user-component__avatar--xl"/>
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">Yu Mijung</h4>
-                      <!--  <h6 class="user-component__subtitle"> Hello, I'm DDackji</h6>
-                        -->
-                    </div>
-                </div>
-                <div class="user-component__column"></div>
-            </div>
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
-                    <span>Channel</span>
-                    <i class="fas fa-chevron-up fa-xs"></i>
-                    </div>
-                    <div class="user-component">
-                        <div class="user-component__column">
-                            <img src="cat.jpeg" class="user-component__avatar user-component__avatar--sm"/>
-                            <div class="user-component__text">
-                                <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                            </div>
-                        </div>
-                        <div class="user-component__column">
-                            <span>2</span>
-                            <i class="fas fa-chevron-right fa-xs"></i>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-    
-
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link"  href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html"> 
-                   <span class="nav__notification">1</span>
-                    <i class="fa-regular fa-comment fa-2x"></i></a></li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__notification2"></div>
-                    <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
-        </ul>
-    </nav>
     <div id="no-mobile">
-        <span>Your screen is too big... </span>
+      <span>Your screen is too big ㅠㅠ</span>
     </div>
-    <script src="https://kit.fontawesome.com/79da796ef8.js" 
-            crossorigin="anonymous">
 
-    </script>
-</body>
-</html> 
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
