--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="css/styles.css" />
+<head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Clone</title>
-  </head>
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span>No Service</span>
-        <i class="fas fa-wifi"></i>
-      </div>
-      <div class="status-bar__column">
-        <span>18:43</span>
-      </div>
-      <div class="status-bar__column">
-        <span>110%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
-      </div>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login -  Kokoa Talk</title>
+</head>
+<body> 
+    <div class="status-bar"> <!-- 상단 메뉴바 -->
+        <div class="status-bar__column">
+            <span>No Service</span>
+            <i class="fa-sharp fa-solid fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+            <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+            <span>12%</span> 
+            <!-- 베터리 아이콘 -->
+            <i class="fa-solid fa-battery-quarter fa-lg"></i>
+            <!-- 충전중 아이콘 -->
+            <i class="fa-solid fa-bolt"></i>
+        </div>
     </div>
+
 
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
@@ -41,7 +45,7 @@
     </div>
 
     <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/79da796ef8.js"
       crossorigin="anonymous"
     ></script>
   </body>
